--- a/src/assets/scss/custom-styles.scss
+++ b/src/assets/scss/custom-styles.scss
@@ -69,7 +69,7 @@ $foundation-palette: ( primary: #2C65AD, secondary: #767676, success: #009829, w
 $light-gray: #efefef;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
-$black: #0a0a0a;
+$black: #555;
 $white: #fefefe;
 $body-background: darken($primary-color, 30%);
 $body-font-color: #666;
