--- a/src/assets/scss/c-forms.scss
+++ b/src/assets/scss/c-forms.scss
@@ -1,7 +1,7 @@
 .inside-modal {
-    padding: 0px 30px;
+    padding: 0px 20px;
     header {
-        margin-left: 20px;
+        margin-left: 10px;
     }
     label {
         font-size: .9em;
@@ -9,11 +9,18 @@
         color: darken($primary-color, 20%);
     }
     .breadcrumbs {
-        margin-left: 20px;
+        margin-left: 10px;
+        margin-bottom: 0;
+    }
+    .button-group {
+        ul {
+            text-decoration: none;
+            list-style: none;
+        }
     }
 }
 
-.reveal {
+#formModal {
     padding: 0 !important;
     .top-bar {
         background: darken($primary-color, 20%);
@@ -37,12 +44,16 @@
             float: right;
         }
     }
+    form {
+        margin: 10px;
+    }
 }
 
 .upload-dropzone {
     background: lighten($primary-color, 55%);
     border: 1px solid lighten($primary-color, 35%);
-    color: lighten($primary-color, 25%);
+    color: lighten($primary-color, 20%);
+    font-weight: bold;
     text-align: center;
     padding: 20px;
     border-radius: 4px;
@@ -55,6 +66,7 @@
         margin-bottom: 0;
         width: 100%;
         text-align: left;
+        font-size: 12px;
         .fa-trash {
             display: inline-block;
             float: right;
@@ -62,12 +74,96 @@
     }
 }
 
-.end-form {
-    margin-top: 30px;
+.form-area,
+.rejected_rfi {
+    margin-top: 10px;
     border-top: 1px solid lighten($primary-color, 35%);
-    padding: 20px;
+    padding: 10px 20px;
+    width: 100%;
     .button-group {
         float: right;
+    }
+    a.success,
+    a.success:hover {
+        color: $white;
+    }
+    h4 {
+        margin-bottom: 0;
+    }
+    span {
+        line-height: 32px;
+        color: $dark-gray;
+        font-size: 18px;
+        font-weight: bold;
+    }
+    h5 {
+        color: $black;
+        font-size: 16px;
+        font-weight: bold;
+    }
+    .gray {
+        background: $light-gray;
+        border: 1px solid $medium-gray;
+        padding-top: 10px;
+        margin-bottom: 40px;
+    }
+    th,
+    td {
+        font-size: 12px;
+        text-align: left;
+    }
+    .ready-close {
+        background: lighten($primary-color, 50%);
+        border: 1px solid $primary-color;
+        padding: 10px;
+        height: 60px;
+        span {
+            font-size: 14px;
+            color: $primary-color;
+        }
+        .hollow {
+            background: $white;
+        }
+    }
+    .closing {
+        border: 1px solid $medium-gray;
+        padding: 10px;
+        h5 {
+            color: $primary-color;
+            line-height: 2em;
+        }
+    }
+    .closed {
+        border: 1px solid $success-color;
+        padding: 10px;
+        background: lighten($success-color, 68%);
+        h5 {
+            color: $success-color;
+            line-height: 2em;
+        }
+        .hollow {
+            background: $white;
+        }
+    }
+}
+
+.rejected_rfi {
+    background: lighten($alert-color, 55%);
+    border: 1px solid $alert-color;
+    display: block;
+    margin: 10px;
+    width: 780px;
+}
+
+.end-form {
+    margin-top: 10px;
+    text-align: right;
+    border-top: 1px solid lighten($primary-color, 35%);
+    padding: 10px 20px 5px;
+    width: 100%;
+    min-height: 70px;
+    .button-group {
+        float: right
     }
     a.success,
     a.success:hover {
