--- a/src/assets/scss/c-accordion.scss
+++ b/src/assets/scss/c-accordion.scss
@@ -79,6 +79,6 @@
         }
     }
     .is-active {
-        background: darken($primary-color, 15);
+        background: darken($primary-color, 10%);
     }
 }
