--- a/src/assets/scss/custom-styles.scss
+++ b/src/assets/scss/custom-styles.scss
@@ -69,7 +69,7 @@ $foundation-palette: ( primary: #2C65AD, secondary: #767676, success: #009829, w
 $light-gray: #efefef;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
-$black: #555;
+$black: #444;
 $white: #fefefe;
 $body-background: darken($primary-color, 30%);
 $body-font-color: #666;
@@ -124,7 +124,7 @@ $header-text-rendering: optimizeLegibility;
 $small-font-size: 80%;
 $header-small-font-color: $medium-gray;
 $paragraph-lineheight: 1.6;
-$paragraph-margin-bottom: 1rem;
+$paragraph-margin-bottom: .75rem;
 $paragraph-text-rendering: optimizeLegibility;
 $code-color: $black;
 $code-font-family: $font-family-monospace;
