--- a/src/partials/f-form-2a.html
+++ b/src/partials/f-form-2a.html
@@ -44,8 +44,25 @@
                 <div class="uploaded-docs"> <a class="button clear secondary">RFI-33323232-3.pdf <i class="fa fa-trash" aria-hidden="true"></i></a> </div>
             </label>
         </div>
+        <div class="form-area">
+            <section class="grid-x grid-padding-x">
+                <div class="small-10 cell">
+                    <h4>Accept or Reject RFI</h4> <span>Does this RFI gives a clear description of the problem?
+            <div class="button-group"> <a class="secondary button">Yes</a> <a class="alert button">No</a> </div>
+                </span> </div>
+            </section>
+        </div>
+        <div class="form-area">
+            <h4>Response</h4>
+            <p>by John Smith / Jul 23, 2017 13:01 </p>
+            <div class="grid-x grid-padding-x">
+                <label class="small-12 cell">Response
+                    <textarea name="Response1" cols="40" rows="5" placeholder="Enter comment"></textarea>
+                </label>
+            </div>
+        </div>
         <div class="end-form">
-            <div class="button-group"> <a class="hollow secondary button">Cancel</a> <a class="hollow secondary button">Edit RFI</a> </div>
+            <div class="button-group"> <a class="hollow secondary button">Cancel</a> <a class="alert button">Reject RFI</a> </div>
         </div>
     </div>
 </form>
