--- a/src/partials/f-form-4.html
+++ b/src/partials/f-form-4.html
@@ -2,7 +2,7 @@
     <div class="grid-x grid-padding-x">
         <label class="small-12 cell">Title
             <input disabled type="text" placeholder="RFI title"> </label>
-        <label class="small-4 cell">Plant
+        <label class="small-4 cell">Plant <a class="right clear tool"><i class="fa fa-plus" aria-hidden="true"></i> Add Plant</a>
             <select disabled>
                 <option value="" class="secondary">Select </option>
                 <option value="discipline1">Plant 1</option>
@@ -81,16 +81,8 @@
                         </tr>
                     </table>
                 </div>
-                <div class="small-6 cell closing">
-                    <h5>Closing Action <a class="right button clear secondary"><i class="fa fa-repeat" aria-hidden="true"></i> Undo decision</a> </h5>
-                    <label>Upload reference document
-                        <div class="upload-dropzone"><i class="fa fa-cloud-upload" aria-hidden="true"></i> Drop files here or click to select files</div>
-                    </label>
-                    <label class="small-12 cell">Add comment
-                        <textarea name="Response1" rows="2" placeholder="Enter comment"></textarea>
-                    </label>
-                    <div class="button-group"> <a class="hollow secondary button">Cancel</a> <a class="primary button">Close action</a> </div>
-                </div>
+                <div class="small-6 cell ready-close"><span>Is this action ready to be closed?
+                    <div class="button-group"> <a class="hollow secondary button">Yes</a> <a class="hollow secondary button">No</a> </div></span> </div>
             </section>
         </div>
         <div class="form-area">
@@ -137,8 +129,16 @@
                         </tr>
                     </table>
                 </div>
-                <div class="small-6 cell ready-close"><span>Is this action ready to be closed?
-                    <div class="button-group"> <a class="hollow secondary button">Yes</a> <a class="hollow secondary button">No</a> </div></span> </div>
+                <div class="small-6 cell closing">
+                    <h5>Closing Action <a class="right button clear secondary tool"><i class="fa fa-repeat" aria-hidden="true"></i> Undo</a> </h5>
+                    <label>Upload reference document
+                        <div class="upload-dropzone"><i class="fa fa-cloud-upload" aria-hidden="true"></i> Drop files here or click to select files</div>
+                    </label>
+                    <label class="small-12 cell">Add comment
+                        <textarea name="Response1" rows="2" placeholder="Enter comment"></textarea>
+                    </label>
+                    <div class="button-group"> <a class="hollow secondary button">Cancel</a> <a class="primary button">Close action</a> </div>
+                </div>
             </section>
         </div>
     </div>
