--- a/src/partials/f-form-5.html
+++ b/src/partials/f-form-5.html
@@ -2,7 +2,7 @@
     <div class="grid-x grid-padding-x">
         <label class="small-12 cell">Title
             <input disabled type="text" placeholder="RFI title"> </label>
-        <label class="small-4 cell">Plant
+        <label class="small-4 cell">Plant <a class="right clear tool"><i class="fa fa-plus" aria-hidden="true"></i> Add Plant</a>
             <select disabled>
                 <option value="" class="secondary">Select </option>
                 <option value="discipline1">Plant 1</option>
@@ -82,7 +82,7 @@
                     </table>
                 </div>
                 <div class="small-6 cell closed">
-                    <h5><i class="fa fa-check-circle" aria-hidden="true"></i> Action Closed <a class="right button clear secondary"><i class="fa fa-repeat" aria-hidden="true"></i> Undo decision</a> </h5>
+                    <h5><i class="fa fa-check-circle" aria-hidden="true"></i> Action Closed <a class="right button clear secondary tool"><i class="fa fa-repeat" aria-hidden="true"></i> Undo</a> </h5>
                     <label>Uploaded document
                         <div class="uploaded-docs"> <a class="button clear secondary">RFI-33323232-3.pdf <i class="fa fa-trash" aria-hidden="true"></i></a> </div>
                     </label>
@@ -98,12 +98,17 @@
             <div class="button-group"> <a class="hollow success button">Yes</a> <a class="clear secondary button">No</a> </div>
             </span> </div>
                 <div class="small-6 cell">
-                    <h5>List of changes</h5>
+                    <h5>List of required documents</h5>
                     <table style="width:100%">
                         <tr>
                             <th>Drawing_#</th>
-                            <th>Rev_#</th>
+                            <th>Document_#</th>
                             <th>Comment</th>
+                        </tr>
+                        <tr>
+                            <td>32423</td>
+                            <td>1</td>
+                            <td>Lorem Ipsum is simply dummy text of the printing and x industry.</td>
                         </tr>
                         <tr>
                             <td>32423</td>
@@ -113,7 +118,7 @@
                     </table>
                 </div>
                 <div class="small-6 cell closed">
-                    <h5><i class="fa fa-check-circle" aria-hidden="true"></i> Action Closed <a class="right button clear secondary"><i class="fa fa-repeat" aria-hidden="true"></i> Undo decision</a> </h5>
+                    <h5><i class="fa fa-check-circle" aria-hidden="true"></i> Action Closed <a class="right button clear secondary tool"><i class="fa fa-repeat" aria-hidden="true"></i> Undo</a> </h5>
                     <label>Uploaded document
                         <div class="uploaded-docs"> <a class="button clear secondary">RFI-33323232-3.pdf <i class="fa fa-trash" aria-hidden="true"></i></a> </div>
                     </label>
@@ -129,22 +134,22 @@
             <div class="button-group"> <a class="hollow success button">Yes</a> <a class="clear secondary button">No</a> </div>
             </span> </div>
                 <div class="small-6 cell">
-                    <h5>List of changes</h5>
+                    <h5>List of other actions</h5>
                     <table style="width:100%">
                         <tr>
-                            <th>Drawing_#</th>
-                            <th>Rev_#</th>
-                            <th>Comment</th>
+                            <th>Describe_action</th>
+                            <th>Assigned_to</th>
+                            <th>Due_date</th>
                         </tr>
                         <tr>
-                            <td>32423</td>
-                            <td>1</td>
-                            <td>Lorem Ipsum is simply dummy text of the printing and x industry.</td>
+                            <td>Lorem Ipsum is simply dummy text of the printing</td>
+                            <td>John Smith</td>
+                            <td>Jul/28/2017</td>
                         </tr>
                     </table>
                 </div>
                 <div class="small-6 cell closed">
-                    <h5><i class="fa fa-check-circle" aria-hidden="true"></i> Action Closed <a class="right button clear secondary"><i class="fa fa-repeat" aria-hidden="true"></i> Undo decision</a> </h5>
+                    <h5><i class="fa fa-check-circle" aria-hidden="true"></i> Action Closed <a class="right button clear secondary tool"><i class="fa fa-repeat" aria-hidden="true"></i> Undo</a> </h5>
                     <label>Uploaded document
                         <div class="uploaded-docs"> <a class="button clear secondary">RFI-33323232-3.pdf <i class="fa fa-trash" aria-hidden="true"></i></a> </div>
                     </label>
