--- a/src/partials/f-form-6.html
+++ b/src/partials/f-form-6.html
@@ -1,36 +1,4 @@
-<!doctype html>
-<html class="no-js" lang="en">
-
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RFI app</title>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Oxygen:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/zf/jq-2.2.4/jszip-3.1.3/pdfmake-0.1.27/dt-1.10.15/af-2.2.0/b-1.4.0/b-colvis-1.4.0/b-html5-1.4.0/b-print-1.4.0/cr-1.3.3/fc-3.2.2/fh-3.1.2/r-2.1.1/sc-1.4.2/se-1.2.2/datatables.min.css" />
-    <script type="text/javascript" src="https://cdn.datatables.net/v/zf/jq-2.2.4/jszip-3.1.3/pdfmake-0.1.27/dt-1.10.15/af-2.2.0/b-1.4.0/b-colvis-1.4.0/b-html5-1.4.0/b-print-1.4.0/cr-1.3.3/fc-3.2.2/fh-3.1.2/r-2.1.1/sc-1.4.2/se-1.2.2/datatables.min.js"></script>
-    <link rel="stylesheet" href="assets/css/app.css"> </head>
-
-<body>  <div id="formModal" style="width: 800px; margin: 20px auto; background: #fff;"> <div class="top-bar fixed">
-    <div class="top-bar-left"><a class="button clear">Request</a><a class="button clear">Response</a><a class="button primary">Action Closure</a></div>
-    <div class="top-bar-right"> <span class="success">Status: Awaiting Action Closure</span><a href="#" class="button secondary clear"><i class="fa fa-print" aria-hidden="true"></i> Print</a>
-        <button class="button clear close-form" data-close aria-label="Close modal" type="button"> <span aria-hidden="true">&times;</span> </button>
-    </div>
-</div><div class="inside-modal"><div class="top-bar-left">
-    <nav aria-label="You are here:" role="navigation">
-        <ul class="breadcrumbs">
-            <li><a href="#">All projects </a></li>
-            <li><a href="#">Company 1</a></li>
-            <li> <a href="#">Project 1</a></li>
-        </ul>
-    </nav>
-</div>
-    <header>
-        <h3>Request for information</h3>
-        <p>by Tim Williams / Jul 21, 2017 13:01</p>
-    </header>
-</div><form>
+<form>
     <div class="grid-x grid-padding-x">
         <label class="small-12 cell">Title
             <input disabled type="text" placeholder="RFI title"> </label>
@@ -113,8 +81,8 @@
                         </tr>
                     </table>
                 </div>
-                <div class="small-6 cell ready-close"><span>Is this action ready to be closed?
-                    <div class="button-group"> <a class="hollow secondary button">Yes</a> <a class="hollow secondary button">No</a> </div></span> </div>
+                <div class="small-6 cell confirm-reject"><span>Confirm or reject action closure?
+                    <div class="button-group"> <a class="hollow secondary button">Confirm</a> <a class="hollow secondary button">Reject</a> </div></span> </div>
             </section>
         </div>
         <div class="form-area">
@@ -123,12 +91,17 @@
             <div class="button-group"> <a class="hollow success button">Yes</a> <a class="clear secondary button">No</a> </div>
             </span> </div>
                 <div class="small-6 cell">
-                    <h5>List of changes</h5>
+                    <h5>List of required documents</h5>
                     <table style="width:100%">
                         <tr>
                             <th>Drawing_#</th>
-                            <th>Rev_#</th>
+                            <th>Document_#</th>
                             <th>Comment</th>
+                        </tr>
+                        <tr>
+                            <td>32423</td>
+                            <td>1</td>
+                            <td>Lorem Ipsum is simply dummy text of the printing and x industry.</td>
                         </tr>
                         <tr>
                             <td>32423</td>
@@ -137,8 +110,8 @@
                         </tr>
                     </table>
                 </div>
-                <div class="small-6 cell ready-close"><span>Is this action ready to be closed?
-                    <div class="button-group"> <a class="hollow secondary button">Yes</a> <a class="hollow secondary button">No</a> </div></span> </div>
+                <div class="small-6 cell confirmed-closure">
+                    <h5><i class="fa fa-check-circle" aria-hidden="true"></i><i class="fa fa-check-circle" aria-hidden="true"></i> Confirmed action closure <a class="right button clear secondary tool"><i class="fa fa-repeat" aria-hidden="true"></i> Undo</a> </h5> </div>
             </section>
         </div>
         <div class="form-area">
@@ -147,39 +120,30 @@
             <div class="button-group"> <a class="hollow success button">Yes</a> <a class="clear secondary button">No</a> </div>
             </span> </div>
                 <div class="small-6 cell">
-                    <h5>List of changes</h5>
+                    <h5>List of other actions</h5>
                     <table style="width:100%">
                         <tr>
-                            <th>Drawing_#</th>
-                            <th>Rev_#</th>
-                            <th>Comment</th>
+                            <th>Describe_action</th>
+                            <th>Assigned_to</th>
+                            <th>Due_date</th>
                         </tr>
                         <tr>
-                            <td>32423</td>
-                            <td>1</td>
-                            <td>Lorem Ipsum is simply dummy text of the printing and x industry.</td>
+                            <td>Lorem Ipsum is simply dummy text of the printing</td>
+                            <td>John Smith</td>
+                            <td>Jul/28/2017</td>
                         </tr>
                     </table>
                 </div>
-                <div class="small-6 cell closing">
-                    <h5>Closing Action <a class="right button clear secondary tool"><i class="fa fa-repeat" aria-hidden="true"></i> Undo</a> </h5>
-                    <label>Upload reference document
-                        <div class="upload-dropzone"><i class="fa fa-cloud-upload" aria-hidden="true"></i> Drop files here or click to select files</div>
-                    </label>
-                    <label class="small-12 cell">Add comment
+                <div class="small-6 cell rejected-closure">
+                    <h5><i class="fa fa-check-circle" aria-hidden="true"></i><i class="fa fa-times-circle" aria-hidden="true"></i> Action Closed <a class="right button clear secondary tool"><i class="fa fa-repeat" aria-hidden="true"></i> Undo</a> </h5>
+                    <label class="small-12 cell">Justify rejection <span style="color: red;">*</span>
                         <textarea name="Response1" rows="2" placeholder="Enter comment"></textarea>
                     </label>
-                    <div class="button-group"> <a class="hollow secondary button">Cancel</a> <a class="primary button">Close action</a> </div>
                 </div>
             </section>
         </div>
     </div>
     <div class="end-form">
-        <div class="button-group"> <a class="hollow secondary button">Cancel</a> <a class="secondary button">Save</a> </div>
+        <div class="button-group"> <a class="hollow secondary button">Cancel</a> <a class="success button">Save</a> </div>
     </div>
-</form></div>
-
-    <script src="assets/js/app.js"></script>
-</body>
-
-</html>
+</form>
