--- a/src/partials/f-form.html
+++ b/src/partials/f-form.html
@@ -2,7 +2,7 @@
     <div class="grid-x grid-padding-x">
         <label class="small-12 cell">Title
             <input type="text" placeholder="RFI title"> </label>
-        <label class="small-4 cell">Plant
+        <label class="small-4 cell">Plant <a class="right clear tool"><i class="fa fa-plus" aria-hidden="true"></i> Add Plant</a>
             <select>
                 <option value="" class="secondary">Select </option>
                 <option value="discipline1">Plant 1</option>
